# simple-aesthetics-predictor

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yaml  deploy.yaml  deploy_and_release.yaml  release.yaml
aesthetics_predictor/: __init__.py  configuration_predictor.py  modeling_v1.py  modeling_v2.py  utils.py  v1.py  v2.py
scripts/: app.py  push_to_hub.py
tests/: aesthetics_predictor_v1_test.py  aesthetics_predictor_v2_test.py  conftest.py  utils_test.py
