[tool.poetry]
name = "simple-aesthetics-predictor"
version = "0.1.0"
description = ""
authors = ["Shunsuke KITADA <shunsuke.kitada.0831@gmail.com>"]
readme = "README.md"
packages = [{include = "aesthetics_predictor"}]

[tool.poetry.dependencies]
python = "^3.9"
transformers = "^4.30.2"
torch = "^2.0.1"
torchvision = "^0.15.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.276"
black = "^23.3.0"
mypy = "^1.4.1"
pytest = "^7.4.0"
types-requests = "^2.31.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
