[tool.poetry]
name = "simple-aesthetics-predictor"
version = "0.0.0"                                              # specified by poetry-dynamic-versioning
description = ""
authors = ["Shunsuke KITADA <shunsuke.kitada.0831@gmail.com>"]
readme = "README.md"
packages = [{ include = "aesthetics_predictor" }]

[tool.poetry.dependencies]
python = "^3.8"
transformers = { version = ">=4.6.0", extras = ["torch"] }
torch = ">=1.0"
torchvision = ">=0.2.1"

# V1 uses open-clip-torch, and V2 uses clip.
clip = { git = "https://github.com/openai/CLIP", optional = true }
open-clip-torch = { version = "^2.24.0", optional = true }

[tool.poetry.group.dev.dependencies]
ruff = ">=0.1.5"
mypy = ">=1.0.0"
pytest = ">=6.0.0"
types-requests = "^2.31.0.1"

[tool.poetry.extras]
conversion = ["clip", "open-clip-torch"]

[tool.poetry-dynamic-versioning]
enable = true

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
