[tool.poetry]
name = "simple-aesthetics-predictor"
version = "0.0.0"                                              # specified by poetry-dynamic-versioning
description = ""
authors = ["Shunsuke KITADA <shunsuke.kitada.0831@gmail.com>"]
readme = "README.md"
packages = [{ include = "aesthetics_predictor" }]

[tool.poetry.dependencies]
python = "^3.8"
transformers = { version = ">=4.6.0", extras = ["torch"] }
torch = "!=2.0.1, !=2.1.0"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.1.5"
mypy = ">=1.0.0"
pytest = ">=6.0.0"
types-requests = "^2.32.0.20240602"

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
